# ort-custom-op

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.rst  Cargo.toml  LICENSE  Makefile  Readme.md  _typos.toml  environment.yml  flake.nix  pixi.toml  requirements.txt  shell.nix  test_custom.py
.github/workflows/: ci.yml  nix.yml  pip.yml  release.yaml  rust.yml
example/: Cargo.toml  README.md
example/src/: add.rs  add_constant.rs  attr_showcase.rs  datetime.rs  fallible_op.rs  lib.rs  optional_input.rs  sum.rs  variadic_identity.rs
onnx-custom-op/: Cargo.toml  build.rs
onnx-custom-op/c-api-headers/: onnxruntime_c_api.h
onnx-custom-op/src/: api.rs  custom_op.rs  error.rs  inputs_and_outputs.rs  lib.rs
ort-custom-op/: Cargo.toml  build.rs  make_bindings.sh
ort-custom-op/src/: api.rs  bindings.rs  custom_op.rs  error.rs  inputs.rs  inputs_and_outputs.rs  lib.rs  outputs.rs  value.rs
rust/custom_op/: Cargo.toml  build.rs
rust/custom_op/src/: api.rs  custom_op.rs  lib.rs
src/: api.rs  custom_op.rs  lib.rs
tests/python/: test_custom.py
