[package]
name = "ort_custom_op"
description = "A library for writing custom operators for the onnxruntime in Rust."
version = "0.8.0"
edition = "2024"
license = "BSD-3-Clause"
homepage = "https://github.com/cbourjau/ort-custom-op"
repository = "https://github.com/cbourjau/ort-custom-op"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ndarray = "0.15"
